Fix SVG icon alignment in Input Group addons

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -226,6 +226,16 @@
   min-height: 32px;
   box-shadow: none;
   line-height: 1.5715;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ui-input-group-addon svg {
+  display: block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
 }
 
 .ui-input-group-addon:first-child {
